@@ -1,5 +1,5 @@
 /*
- * Copyright (c) 2020, Oracle and/or its affiliates. All rights reserved.
+ * Copyright (c) 2020, 2025, Oracle and/or its affiliates. All rights reserved.
  * DO NOT ALTER OR REMOVE COPYRIGHT NOTICES OR THIS FILE HEADER.
  *
  * This code is free software; you can redistribute it and/or modify it
@@ -25,19 +25,22 @@
 
 package test.com.sun.webkit;
 
+import static org.junit.jupiter.api.Assertions.assertEquals;
 import java.io.File;
-import static java.util.Arrays.asList;
+import java.util.ArrayList;
 import java.util.List;
-import static org.junit.Assert.assertEquals;
-import org.junit.Test;
+import java.util.concurrent.TimeUnit;
+import org.junit.jupiter.api.Test;
+import org.junit.jupiter.api.Timeout;
 
 /**
  * @test
  * @bug 8242361
  * @summary Check if webkit main thread <-> java integration works correctly
  */
+@Timeout(value=15000, unit=TimeUnit.MILLISECONDS)
 public class MainThreadTest {
-    @Test (timeout = 15000)
+    @Test
     public void testMainThreadDoesNotSegfault() throws Exception {
         // This is an indirect test of the webkit main thread <-> java
         // integration. It was observed, that using a data-url caused the
@@ -55,13 +58,16 @@ public class MainThreadTest {
         final String javaLibraryPath = System.getProperty("java.library.path");
         final String workerJavaCmd = System.getProperty("worker.java.cmd");
 
-        final List<String> cmd = asList(
-            workerJavaCmd,
+        final List<String> cmd = new ArrayList<>();
+        cmd.add(workerJavaCmd);
+
+        cmd.addAll(List.of(
+            "--enable-native-access=ALL-UNNAMED",
             "-cp", appModulePath + "/mymod",
             "-Djava.library.path=" + javaLibraryPath,
             "-Dmodule.path=" + appModulePath + "/mymod" + File.pathSeparator + workerModulePath,
             "myapp7.DataUrlWithModuleLayerLauncher"
-        );
+        ));
 
         final ProcessBuilder builder = new ProcessBuilder(cmd);
 
@@ -70,6 +76,6 @@ public class MainThreadTest {
         Process process = builder.start();
         int retVal = process.waitFor();
 
-        assertEquals("Process did not exit cleanly", 0, retVal);
+        assertEquals(0, retVal, "Process did not exit cleanly");
     }
 }
